# actions-project-variables

./: Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml
.github/workflows/: build.yml
project_variables/: cli.py  variables.py
project_variables/providers/: aws.py  docker.py  docker_test.py  github.py  poetry.py  project.py  python.py  versioning.py  workflow.py
