[tool.poetry]
name = "actions-project-variables"
version = "0.1.0"
description = ""
authors = ["Epsy Health <engineering@epsyhealth.com>"]
packages = [
    { include = "project_variables" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
toml = "^0.10.2"

[tool.poetry.scripts]
project = 'project_variables.cli:run'

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
